# clovr-base

clovr-www/: BlastFormPanel.js  BlastOutputPanel.js  Clovr16sPanel.js  ClovrBlastPanel.js  ClovrComparative.js  ClovrComparativePanel.js  ClovrComparativeTreePanel.js  ClovrCredentialGrid.js  ClovrDatasetPanel.js  ClovrFormPanel.js  ClovrGangliaPanel.js  ClovrMetaPanel.js  ClovrMicrobePanel.js  ClovrPipelinePanel.js  ClovrPipelinesGrid.js  ClovrPipelinesWizard.js  TagGrid.js  clovr.js  dashboard.css  dashboard.html  dashboard.js  desktop.css  desktop.html  desktop.js  icons.css  index.html  index.js  multi.html  multi.js  redirect.html  test_ext.html  test_ext.js  test_ext2.html  test_ext2.js
clovr-www/blast/: index.css  index.html  index.js
clovr-www/ext-plugins/: CenterLayout.js  FileUploadField.js  PanelHeaderToolbar.js  ProgressColumn.js  SuperBoxSelect.js  WindowDrawer.js
clovr-www/util/: get_pass.py
clovr_pipelines/common_config/: cluster.config  (+2 more)
config_policies/: bioinf.py  bowtie.py  crossbow.py  ganglia.py  hadoop.py  sge.py  tophat.py
filesystem/: README  filesystem.list
opt-packages/: README.md  bowtie  cufflinks  opt_packages.tgz.REMOVED.git-id
opt-packages/globus-5.0.0/share/libtool/libltdl/gcc64dbgpthr/shared/: Makefile.am  Makefile.in  acinclude.m4  configure
patches/: clovr-standard-2011-08-25-05-13-27-p1  clovr-standard-2011-10-19-03-00-27-p1  clovr-standard-2011-10-19-03-00-27-p2  clovr-standard-2011-10-19-03-00-27-p3  clovr-standard-2011-10-19-03-00-27-p4  clovr-standard-2012-03-26-03-00-26-p1
stow/: ganglia  tophat  xstow.ini
(+3268 files in other folders)
